--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "La prueba consta de varios apartados donde se pide al alumno que desarrolle desde cero un proyecto sencillo de Nodejs para, continuación, dockerizar la solución.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "cross-env NODE_ENV=development node src/index.js",
+    "prod": "cross-env NODE_ENV=production node src/index.js"
   },
   "keywords": [],
   "author": "",
