--- a/development.env
+++ b/development.env
@@ -3,6 +3,6 @@ HOST=127.0.0.1
 PORT=8443
 MONGODB_USER=user2
 MONGODB_PASSWORD=user
-MONGODB_HOST=localhost
+MONGODB_HOST=127.0.0.1
 MONGODB_DATABASE=crud
 MONGODB_PORT=27017
