--- a/production.env
+++ b/production.env
@@ -1,8 +1,8 @@
 NODE_ENV=production
-HOST=localhost
+HOST=127.0.0.1
 PORT=8000
 MONGODB_USER=user2
 MONGODB_PASSWORD=user
-MONGODB_HOST=localhost
+MONGODB_HOST=127.0.0.1
 MONGODB_DATABASE=crud
 MONGODB_PORT=27017
