--- a/.gitignore
+++ b/.gitignore
@@ -78,8 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
-.development.env
-.production.env
+development.env
+production.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
